style.css
/* ... */
nav .logo {
    color: var(--text-900);
    font-size: 2em;
    text-transform: uppercase;
    cursor: pointer;
    padding-left: 2.5vw;
    font-weight: bold;
}

nav .logo a {
    text-decoration: none;
    color: var(--text-900);
}

nav ul {
    list-style-type: none;
}

nav ul li a{
    text-decoration: none;
}

nav .subhead {
    display: flex;
    gap: 2.5vw;
}

nav .subhead li a {
    color: var(--text-900);
    font-size: 1.1em;
    transition: all .2s linear;
}

nav .subhead li a:hover {
    color: var(--accent-500);
    transition: all .2s linear;
}

nav .links {
    display: flex;
    gap: 1dvw;
    padding-right: 2.5vw;
    transform: scale(125%);
}

nav .links li a {
    color: var(--text-900);
    font-size: 1.1em;
    transition: all .2s linear;
}

nav .links li a:hover i {
    color: var(--accent-500);
    transition: all .2s linear;
}

.maintextheading {
    font-size: 7.5em;
    font-weight: bold;
    font-style: italic;
}

.maintextparagraph {
    font-size: 1.5em;
    padding-top: 1.5vh;
}

.maintextspan {
    color: var(--secondary-500);
}

.aboutmesec {
    width: 100%;
    height: 100vh;
    color: var(--text-900);
    display: flex;
    justify-content: center;
    align-items: flex-start;
    flex-direction: column;
}

.aboutmetext {
    margin-left: 10vw;
}

.aboutmeheading {
    font-size: 5em;
    font-weight: bold;
    font-style: italic;
}

.aboutmeparagraph {
    padding-top: 2vh;
    font-size: 1.25em;
    line-height: 1.4em;
}

.aboutmespan {
    color: var(--accent-500);
}

.socialsec {
    width: 100%;
    height: 100vh;
    color: var(--text-900);
    display: flex;
    justify-content: center;
    align-items: center;
}

.socialelements {
    display: flex;
    gap: 5vw;
}

.socialelement {
    width: 15vw;
    height: 25vh;
    background-color: var(--background-200);
    border-radius: 25px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.socialelement i {
    font-size: 7.5em;
}

.fa-instagram {
    color: var(--text-900);
    transition: all .2s linear;
}

.socialelement .insta:hover .fa-instagram {
    background-image: linear-gradient(
        135deg, #405DE6
        0%,#833AB4
        25%,#C13584
        50%,#F56040
        75%,#FCAF45
        100%);
    color: transparent;
    background-clip: text;
    transition: all .2s linear;
}

.fa-github {
    color: var(--text-900);
    transition: all .2s linear;
}

.socialelement .github:hover .fa-github {
    background-image: linear-gradient(
        135deg, #8b97a3
        25%,	#717d8a
        50%,	#5c666e
        75%,	#4d565e
        100%);
    color: transparent;
    background-clip: text;
    transition: all .2s linear;
}

.fa-spotify {
    color: var(--text-900);
    transition: all .2s linear;
}

.socialelement .spotify:hover .fa-spotify {
    background-image: linear-gradient(
        120deg, #1db954
        0%,	#191414
        100%);
    color: transparent;
    background-clip: text;
    transition: all .2s linear;
}

.fa-steam {
    color: var(--text-900);
    transition: all .2s linear;
}

.socialelement .steam:hover .fa-steam {
    background-image: linear-gradient(
        120deg, #00adee
        0%,	#000000
        100%);
    color: transparent;
    background-clip: text;
    transition: all .2s linear;
}

.socialelement:nth-child(2) {
    transition-delay: 200ms;
}

.socialelement:nth-child(3) {
    transition-delay: 400ms;
}

.socialelement:nth-child(4) {
    transition-delay: 600ms;
} 

.skillssec {
    width: 100%;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: flex-start;
    flex-direction: column;
    color: var(--text-900);
}

.skillstexts {
    margin-left: 10vw;
}

.skillsheading {
    font-size: 5em;
    font-weight: bold;
    font-style: italic;
}

.skillsspan {
    color: var(--accent-500);
}

.skillsparagraph {
    padding-top: 2vh;
    padding-bottom: 3.5vh;
    font-size: 1.15em;
    line-height: 1.4em;
}

.skillsicons {
    display: flex;
    gap: 1.5dvw;
    font-size: 2.5em;
    color: var(--accent-500);
}

.skillicon:nth-child(1) {
    transition-delay: 200ms;
}

.skillicon:nth-child(2) {
    transition-delay: 400ms;
}

.skillicon:nth-child(3) {
    transition-delay: 600ms;
}

.skillicon:nth-child(4) {
    transition-delay: 800ms;
} 

.projectsec {
    color: var(--text-900);
}

.sticky_parent {
    height: 500vh;
}

.sticky {
    overflow: hidden;
    position: sticky;
    top: 10dvh;
    height: 90vh;
}

.scroll_section {
    position: absolute;
    top: 0;
    height: 100%;
    width: 500vw;
    will-change: transform;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.project {
    width: 100%;
    height: 50vh;
}

.projecthead {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 2em;
    font-style: italic;
    font-weight: bold;
}

.firstproject, .secondproject, .thirdproject, .fourthproject {
    width: 80%;
    margin-left: 10%;
    align-items: center;
    height: 50vh;
    background-color: var(--background-200);
    padding: 1vw;
    border-radius: 25px;
}

.firstproject {
    display: flex;
    align-items: flex-start;
    justify-content: center;
}

.firstpic {
    width: 50vw;
    border-radius: 10px;
    margin-right: .25vw;
}

.firstproject h1 {
    font-size: 2.5em;
    font-style: italic;
    padding: 1vh 0 1vh .5vw;
}

.firstproject p {
    font-size: 1.1em;
    padding-left: .5vw;
    padding-top: 1vh;
    line-height: 1.3em;
    padding-bottom: 12.5vh;
    padding-right: 1vw;
}

.firstproject button {
    font-size: 1.1em;
    padding: 1vh 2vw;
    border-radius: 10px;
    border: none;
    background-color: var(--accent-500);
    color: white;
    cursor: pointer;
    width: 50%;
    margin-left: 25%;
}

.firstproject button:hover {
    background-color: var(--accent-600);
}

.firstproject .left {
    display: flex;
    flex-direction: column;
}
/* ... */

